<resources>
    <string name="app_name">Collect Index</string>


    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="register">Sign up</string>
    <string name="next">Next</string>
    <string name="client_code">Client Number</string>
    <string name="counter_num">Counter Num</string>
    <string name="mobile_number_hint">Mobile Number</string>
    <string name="email_hint">Email</string>


    <string name="alreadyHaveAccount">Already
        \nhave an
        \nAccount?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Sign In</string>
    <string name="new_user_register_now">New user? Sign up Now</string>
    <string name="follow_us">Follow Us!</string>
    <string name="logo_ade" translatable="false">Logo ADE</string>
    <string name="goto_register_activity" translatable="false">goto register Activity</string>
    <string name="goto_login_activity" translatable="false">goto login Activity</string>
    <string name="goto_website" translatable="false">goto website</string>
    <string name="goto_facebook_page" translatable="false">goto facebook page</string>
    <string name="your_first_step_with_us">Here’s
        \nyour first
        \nstep with
        \nus!</string>
    <string name="reset_password">Reset
        \npassword</string>
    <string name="already_have_an_account">Already have an account?</string>


    <!-- VALIDATION -->

    <string name="field_required">%1$s required</string>
    <string name="field_equal">%1$s must contain %2$d characters</string>
    <string name="field_under">%1$s must be less than %2$d characters</string>
    <string name="field_greater">%1$s must be greater than %2$d characters</string>
    <string name="field_between">%1$s must be between %2$d and %3$d characters</string>
    <string name="username_or_password_incorrect">Username or Password wrong!</string>
    <string name="field_invalid">Invalid %1$s</string>
    <string name="field_at_least">%1$s must contain at least %2$d characters</string>
    <string name="password_requirement">At least 1 lowercase, 1 uppercase and 1 number.</string>
    <string name="no_spaces">%1$s must not contain spaces</string>
    <string name="not_matched">%1$s does not match.</string>
    <string name="fields_invalid">Fields invalid</string>
    <string name="field_already_token">%1$s is already token!</string>
    <string name="something_wrong">Something wrong. Please try again later!</string>
    <string name="already_signed_up">you are already Signed Up</string>
    <string name="field_inccorect">%1$s incorrect</string>
    <string name="fields_required">All fields are required</string>
    <string name="person_logo" translatable="false">person logo</string>
    <string name="address">Address</string>
    <string name="old_index">Old index</string>
    <string name="new_index">New index</string>
    <string name="add_index">Add index</string>
    <string name="add">ADD</string>
    <string name="show_history">Show history</string>
    <string name="cant_add_index_today">You can\'t ADD index today</string>
    <string name="error_add_index">Failed to add index, add it later!</string>
    <string name="error_update_counter">Failed to update counter</string>
    <string name="date">Date</string>
    <string name="verify_email">please verify your email!</string>
    <string name="sign_up_complete">Sign up completed successfully</string>
    <string name="reset">Reset</string>
    <string name="verify">verify</string>
    <string name="repeat_password_hint">Repeat password</string>
    <string name="error_update_password" >Failed to update password</string>
    <string name="password_secces">Password was reset successfully</string>
    <string name="verification_link">You need to verify your email address! Sign into your email account and click on the verification link</string>
    <string name="info_icon" translatable="false">info icon</string>
    <string name="status">Status</string>
    <string name="open">Opened</string>
    <string name="block">Blocked</string>
</resources>
