<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/bg_primary_color"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context=".LoginActivity">

    <ScrollView
        style="@style/parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:paddingTop="20dp">

        <LinearLayout
            style="@style/parent"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout style="@style/parent">

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/alreadyHaveAccount" />

                <ImageView
                    style="@style/viewParent"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/logo_ade"
                    android:src="@drawable/ic_hero" />
            </RelativeLayout>

            <TextView
                android:id="@+id/textViewErrorLogin"
                style="@style/parent"
                android:layout_marginTop="@dimen/largeMargin"
                android:text="@string/username_or_password_incorrect"
                android:textColor="@color/errorColor"
                android:textSize="@dimen/normalTextSize"
                android:visibility="invisible" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLoginUsername"
                style="@style/parent"
                app:endIconMode="clear_text"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/editTextLoginUsername"
                    style="@style/modifiedEditText"
                    android:autofillHints="faroukious0@gmail.com"
                    android:hint="@string/username_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLoginPassword"
                style="@style/parent"
                android:layout_marginTop="@dimen/normalMargin"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/editTextLoginPassword"
                    style="@style/modifiedEditText"
                    android:autofillHints=""
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/viewParent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/forgot_password"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/normalTextSize" />

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/cirLoginButton"
                style="@style/loginButton"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/largeMargin"
                android:text="@string/login"
                app:initialCornerAngle="27dp"
                app:spinning_bar_color="#FFF"
                app:spinning_bar_padding="6dp"
                app:spinning_bar_width="4dp" />

            <TextView
                style="@style/parent"
                android:layout_marginTop="@dimen/largeMargin"
                android:onClick="onRegisterClick"
                android:text="@string/new_user_register_now"
                android:textAlignment="center"
                android:textColor="@color/themeColor"
                android:textSize="17sp"
                android:textStyle="bold" />

            <LinearLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/layoutMargin"
                android:gravity="center"
                android:weightSum="12">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="3"
                    android:background="@color/colorPrimaryDark" />

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/follow_us"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="3"
                    android:background="@color/colorPrimaryDark" />

            </LinearLayout>

            <include layout="@layout/follow_us"/>


        </LinearLayout>

    </ScrollView>

    <View
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_side_bg" />

    <ImageView
        style="@style/viewParent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/goto_register_activity"
        android:onClick="onRegisterClick"
        android:src="@drawable/ic_add_img" />

</RelativeLayout>