<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_accent_color"
    android:gravity="start"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        style="@style/viewParent"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="@dimen/radius_card_full">

    <ImageView
        style="@style/viewParent"
        android:background="@color/bg_primary_color"
        android:src="@drawable/ic_person"
        android:translationY="-4dp"
        android:contentDescription="@string/person_logo" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        style="@style/viewParent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/fullNameBar"
            style="@style/viewParent"
            android:maxLines="1"
            android:text="@string/app_name"
            android:letterSpacing="0.01"
            android:textSize="@dimen/topTextSize"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:id="@+id/codeClientBar"
            style="@style/viewParent"
            android:maxLines="1"
            android:letterSpacing="0.15"
            android:textStyle="bold"
            android:text="@string/client_code"
            android:textSize="@dimen/newsMoreTextSize"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>

</LinearLayout>