<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:focusableInTouchMode="true"
    android:background="@color/bg_accent_color"
    tools:context=".RegisterActivity">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <LinearLayout
            style="@style/parent"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:padding="20dp">
            <RelativeLayout
                style="@style/parent">
                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/your_first_step_with_us"
                    android:textColor="@color/whiteTextColor" />
                <ImageView

                    style="@style/viewParent"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:paddingBottom="20dp"
                    android:src="@drawable/ic_hero"
                    android:contentDescription="@string/logo_ade" />
            </RelativeLayout>
            <androidx.cardview.widget.CardView
                style="@style/parent"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/whiteTextColor"
                app:cardCornerRadius="27dp">
                <LinearLayout
                    style="@style/parent"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewErrorRegister"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/largeMargin"
                        android:textColor="@color/errorColor"
                        android:visibility="invisible"
                        android:textSize="@dimen/normalTextSize"
                        android:text="@string/username_or_password_incorrect"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputClientNum"
                        app:endIconMode="clear_text"
                        app:errorEnabled="true"
                        style="@style/parent">
                        <EditText
                            android:id="@+id/editTextClientNum"
                            style="@style/modifiedEditText"
                            android:hint="@string/client_code"
                            android:inputType="textCapCharacters"
                            android:maxLength="12"
                            android:maxLines="1"
                            android:autofillHints="" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputEmail"
                        app:endIconMode="clear_text"
                        app:errorEnabled="true"
                        style="@style/parent">

                        <EditText
                            android:id="@+id/editTextEmail"
                            style="@style/modifiedEditText"
                            android:hint= "@string/email_hint"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:autofillHints="" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputUsername"
                        app:endIconMode="clear_text"
                        app:errorEnabled="true"
                        style="@style/parent">
                        <EditText
                            android:id="@+id/editTextUsername"
                            style="@style/modifiedEditText"
                            android:hint="@string/username_hint"
                            android:inputType="textAutoComplete"
                            android:maxLines="1"
                            android:autofillHints="@string/username_hint" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputPassword"
                        app:errorEnabled="true"
                        app:passwordToggleEnabled="true"
                        style="@style/parent">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextPassword"
                            style="@style/modifiedEditText"
                            android:hint="@string/password_hint"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:autofillHints="" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                        android:id="@+id/cirRegisterButton"
                        style="@style/loginButton"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginTop="@dimen/largeMargin"
                        android:text="@string/register"
                        app:initialCornerAngle="27dp"
                        app:spinning_bar_color="#FFF"
                        app:spinning_bar_padding="6dp"
                        app:spinning_bar_width="4dp" />

                    <TextView
                        style="@style/parent"
                        android:layout_marginTop="@dimen/largeMargin"
                        android:onClick="onLoginClick"
                        android:text="@string/already_have_an_account"
                        android:textAlignment="center"
                        android:textColor="@color/themeColor"
                        android:textSize="17sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                style="@style/parent"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:weightSum="12">
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="3"
                    android:background="@color/whiteTextColor" />
                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_weight="4"
                    android:text="@string/follow_us"
                    android:textAlignment="center"
                    android:textColor="@color/whiteTextColor"
                    android:textSize="12sp" />
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="3"
                    android:background="@color/whiteTextColor" />
            </LinearLayout>

            <include layout="@layout/follow_us"/>

        </LinearLayout>

    </ScrollView>

    <View
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_side_bg" />

    <ImageView
        style="@style/viewParent"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="30dp"
        android:adjustViewBounds="false"
        android:onClick="onLoginClick"
        android:src="@drawable/ic_back_img"
        android:contentDescription="@string/goto_login_activity" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="match_parent">

        <include layout="@layout/email"/>
    </RelativeLayout>
</RelativeLayout>