<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_primary_color"
    android:gravity="start"
    android:padding="@dimen/normalMargin">

    <androidx.cardview.widget.CardView
        android:id="@+id/backCounterBar"
        style="@style/viewParent"
        android:onClick="back"
        android:layout_marginEnd="@dimen/largeMargin"
        app:cardCornerRadius="@dimen/radius_card_full">

        <ImageView
            style="@style/viewParent"
            android:background="@color/bg_primary_color"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/person_logo" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        style="@style/viewParent"
        android:orientation="vertical">
        <TextView
            style="@style/viewParent"
            android:maxLines="1"
            android:text="@string/counter_num"
            android:letterSpacing="0.01"
            android:textSize="@dimen/normalTextSize"
            android:textColor="@color/darkTextColor"/>
        <TextView
            android:id="@+id/counterNumBar"
            style="@style/viewParent"
            android:maxLines="1"
            android:letterSpacing="0.15"
            android:textStyle="bold"
            android:text="@string/client_code"
            android:textSize="@dimen/topTextSize"
            android:textColor="@color/darkTextColor"/>
    </LinearLayout>

</LinearLayout>